fix styling for dark mode slider

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -8,7 +8,7 @@ body.light-mode {
   --font-color: #000000;
 }
 body.dark-mode {
-  background-color: #1a1919;
+  background-color: rgb(17, 17, 34);
   color: #ffffff;
   --color-primary: #0060df;
   --color-secondary: #fbfbfe;
@@ -133,7 +133,7 @@ a:hover {
 .switch {
   position: relative;
   display: inline-block;
-  width: 50px;
+  width: 40px;
   height: 15px;
 }
 
@@ -160,8 +160,8 @@ a:hover {
 .slider:before {
   position: absolute;
   content: "";
-  height: 30px;
-  width: 30px;
+  height: 28px;
+  width: 28px;
   left: 0px;
   bottom: 4px;
   top: 0;
@@ -184,9 +184,9 @@ input:focus + .slider {
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(24px);
-  -ms-transform: translateX(24px);
-  transform: translateX(24px);
+  -webkit-transform: translateX(15px);
+  -ms-transform: translateX(15px);
+  transform: translateX(15px);
   background: white url('https://i.ibb.co/7JfqXxB/sunny.png');
   background-repeat: no-repeat;
   background-position: center;
